change hyperlinks over h2.

--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
   <div class="row">
     <div class="col-lg-4 col-md-6">
       <section>
-        <h2 id="chicken" class="fade"><a href="https://en.wikipedia.org/wiki/Chicken">Chicken</a></h2>
+        <a href="https://en.wikipedia.org/wiki/Chicken"><h2 id="chicken" class="fade">Chicken</h2></a>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit reiciendis nulla porro expedita illo impedit! Ex modi sit tempora ipsa. Quasi culpa ut tenetur repudiandae eligendi voluptatum, architecto rerum, molestiae.</p>
       </section>
     </div>
   
   <div class="col-lg-4 col-md-6">
     <section>
-      <h2 id="beef" class="fade"><a href="https://en.wikipedia.org/wiki/Beef">Beef</a></h2>
+      <a href="https://en.wikipedia.org/wiki/Beef"><h2 id="beef" class="fade">Beef</h2></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas ipsa quae dolorem tempora nulla hic earum maiores debitis, dolore modi, ratione consequuntur rerum enim dicta nobis deleniti quos, expedita obcaecati.</p>
     </section>
   </div>
 
   <div class="col-lg-4 col-md-12">
     <section>
-      <h2 id="sushi" class="fade"><a href="https://en.wikipedia.org/wiki/Sushi">Sushi</a></h2>
+      <a href="https://en.wikipedia.org/wiki/Sushi"><h2 id="sushi" class="fade">Sushi</h2></a>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, consequuntur. Accusamus suscipit soluta expedita, deserunt itaque hic, aperiam, cumque beatae maxime labore consectetur cum aliquid dicta iste cupiditate incidunt quasi.</p>
     </section>
    </div>
